# ruv-FANN

./: .claude.json  .gitignore  .mcp.json  .roomodes  ADD_TO_PROFILE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DAA_BUSINESS_CASE_SUMMARY.md  DAA_INNOVATIVE_USE_CASES.md  DAA_TECHNICAL_IMPLEMENTATION_GUIDE.md  Dockerfile  ENSEMBLE_IMPLEMENTATION_SUMMARY.md  EPIC_31_COMPLETION_SUMMARY.md  EPIC_COMMAND_USAGE.md  EPIC_CREATION_GUIDE.md  FINAL_VERIFICATION_REPORT.md  GITHUB_CI_TEST_REVIEW.md  GITHUB_MCP_SETUP.md  GITHUB_SWARM_SETUP.md  INTEGRATION_STATUS_REPORT.md  INTEGRATION_TEST_REPORT.md  LICENSE  README.md  SETUP_COMPLETE.md  SWARM_COMMANDS_QUICK_REF.md  WORKFLOW_FIX_VERIFICATION.md  claude-flow  claude_polyglot_benchmark.py  configure-github-mcp.js  deny.toml  docker-compose.test.yml  epic-openai-image-gen.md  integration-test.js  jest.config.js  jest.setup.js  package-lock.json  package.json  setup-swarm-env.sh  start-mcp.sh  (+10 more)
cuda-wasm/: .eslintrc.js  .gitignore  .npmignore  ARCHITECTURAL_DECISIONS.md  BUILD_SYSTEM.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TEST_SUITE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  MODULE_FIXES_SUMMARY.md  NEURAL_INTEGRATION_README.md  OPTIMIZATION_SUMMARY.md  README.md  README.npm.md  TESTING.md  architecture.md  build.rs  cuda-wasm-core-1.0.0.tgz  jest.config.js  neural_integration.d.ts  package-lock.json  package.json  tarpaulin.toml  test_basic.cu  test_basic.rs  test_simple  test_simple.rs  tsconfig.json
cuda-wasm/.claude/sessions/: 2025-07-12T05-59-23.271Z-summary.md
cuda-wasm/.github/workflows/: ci.yml  comprehensive-testing.yml  release.yml
cuda-wasm/.swarm/: memory.db
cuda-wasm/benches/: kernel_benchmarks.rs  memory_benchmarks.rs  performance_benchmarks.rs  regression_benchmarks.rs  transpiler_benchmarks.rs  wasm_vs_native_benchmarks.rs
cuda-wasm/bindings/node/: binding.gyp
cuda-wasm/cli/: index.js  simple.js
cuda-wasm/cuda-examples/: vector_add.js
cuda-wasm/demo/: demo.js  index.html
cuda-wasm/docs/: API.md  MIGRATION_GUIDE.md  performance.md  troubleshooting.md
cuda-wasm/docs/internal/: PERFORMANCE_OPTIMIZATION_REPORT.md  PUBLICATION_READY.md  PUBLISH_CUDA_WASM.md
cuda-wasm/docs/tutorials/: advanced-patterns.md  getting-started.md
cuda-wasm/examples/: vector_add.rs
cuda-wasm/examples/transpiled/: README.md  matrix_multiply.rs  reduction.rs  stencil.rs  vector_add.rs
cuda-wasm/my-cuda-wasm-project/: README.md  package.json
cuda-wasm/my-cuda-wasm-project/kernels/: vector_add.cu
cuda-wasm/scripts/: build-wasm-optimized.sh  build-wasm-size-optimized.sh  build-wasm.sh  postinstall.js  publish.sh  run_comprehensive_tests.sh  test-integration.js  test.sh  validate-package.js
cuda-wasm/src/: error.rs  lib.rs  prelude.rs
cuda-wasm/src/.swarm/: memory.db
cuda-wasm/src/backend/: backend_trait.rs  mod.rs  native_gpu.rs  wasm_runtime.rs  webgpu_optimized.rs
cuda-wasm/src/kernel/: mod.rs
cuda-wasm/src/memory/: device_memory.rs  host_memory.rs  memory_pool.rs  mod.rs  unified_memory.rs
cuda-wasm/src/neural_integration/: benchmarks.rs  bridge.rs  cuda_kernels.rs  examples.rs  gpu_neural_ops.rs  memory_manager.rs  mod.rs  performance_monitor.rs  wasm_bindings.rs  wasm_types.rs
cuda-wasm/src/parser/: ast.rs  cuda_parser.rs  mod.rs
cuda-wasm/src/profiling/: kernel_profiler.rs  memory_profiler.rs  mod.rs  performance_monitor.rs  runtime_profiler.rs
cuda-wasm/src/runtime/: device.rs  event.rs  grid.rs  kernel.rs  memory.rs  mod.rs  stream.rs
cuda-wasm/src/transpiler/: ast.rs  code_generator.rs  kernel_translator.rs  mod.rs  tests.rs  wgsl.rs
cuda-wasm/src/utils/: mod.rs
cuda-wasm/test-install/: package-lock.json  package.json
cuda-wasm/tests/: basic.test.js  browser_tests.rs  cross_platform_tests.rs  integration_tests.rs  memory_safety_tests.rs  memory_tests.rs  parser_tests.rs  property_tests.rs  runtime_tests.rs  setup.js  transpiler_tests.rs
cuda-wasm/tests/common/: mod.rs
lie-detector/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  EDGE_CASE_TESTING_SUMMARY.md  ETHICS.md  GETTING_STARTED.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_GUIDE.md  PUBLICATION_STATUS.md  README.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  TUTORIAL.md  USER_GUIDE.md  memory_optimization_report.md  rustfmt.toml  test_aligned.rs  test_basic  test_basic_functionality.rs  test_data  test_mcp_simple  test_mcp_simple.rs  test_mcp_tools.rs  test_with_data.rs
lie-detector/.github/workflows/: ci.yml
lie-detector/benches/: audio_benchmarks.rs  fusion_benchmarks.rs  performance_regression.rs  text_analysis.rs  vision_benchmarks.rs
lie-detector/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
lie-detector/doc/aligned_vec/: all.html  index.html
lie-detector/docs/: README.md
lie-detector/docs/api/: types.md  (+1 more)
lie-detector/examples/: README.md  basic_detection.rs  basic_fusion.rs  batch_processing.rs  cascade_training.rs  explainable_decisions.rs  mcp_server.rs  multi_modal_fusion.rs  real_time_analysis.rs  text_analysis_demo.rs
lie-detector/plans/: README.md  mcp-interface-specification.md  notebook.txt  research.md  veritas-core-architecture.md  veritas-core-technical-spec.md  veritas-nexus-implementation-plan.md
lie-detector/scripts/: release.sh
lie-detector/src/: engine.rs  error.rs  error_hardening.rs  lib.rs  lib_old.rs  neural_integration.rs  prelude.rs  test_aligned.rs  types.rs  utils.rs
lie-detector/tests/: agent_integration_tests.rs  comprehensive_edge_case_report.rs  edge_case_tests.rs  graceful_degradation_tests.rs  network_failure_tests.rs  property_runner.rs  reasoning_tests.rs  text_analysis_tests.rs
opencv-rust/: Cargo.toml  PUBLISHING_GUIDE.md  README.md  publish-simple.sh  publish.sh
opencv-rust/examples/: basic_image_processing.rs  neural_network_integration.rs
opencv-rust/opencv-core/: Cargo.toml  README.md
opencv-rust/opencv-sdk/: Cargo.toml  README.md  build.rs
opencv-rust/opencv-sys/: Cargo.toml  build.rs
opencv-rust/opencv-wasm/: Cargo.toml  README.md
opencv-rust/tests/: integration_tests.rs
(+1313 files in other folders)
