[workspace]

[package]
name = "veritas-nexus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Advanced multi-modal lie detection system with explainable AI, featuring text, vision, audio, and physiological analysis with ReAct reasoning"
repository = "https://github.com/ruv-FANN/veritas-nexus"
homepage = "https://github.com/ruv-FANN/veritas-nexus"
documentation = "https://docs.rs/veritas-nexus"
authors = ["Veritas Nexus Contributors"]
readme = "README.md"
keywords = ["ai", "machine-learning", "lie-detection", "multimodal", "explainable-ai"]
categories = ["science", "algorithms"]
include = [
    "src/**/*",
    "README.md",
    "ETHICS.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "Cargo.toml",
    "examples/**/*"
]

[package.metadata]
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
denylist = ["benchmarking"]
skip_feature_sets = [["gpu", "parallel"]]

[package.metadata.workspaces]
no_individual_tags = true

[features]
default = ["parallel"]
parallel = ["rayon", "crossbeam"]
gpu = ["candle-core", "candle-nn"]
benchmarking = ["criterion"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System information
num_cpus = "1.16"

# Numerical computing
num-traits = "0.2"
num-complex = "0.4"
ndarray = "0.15"
aligned-vec = "0.5"

# Neural networks and ML (optional for GPU)
candle-core = { version = "0.6", optional = true }
candle-nn = { version = "0.6", optional = true }
candle-transformers = { version = "0.6", optional = true }
tokenizers = "0.15"
hf-hub = { version = "0.3", optional = true }

# Text processing
regex = "1.10"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
whatlang = "0.16"
ropey = "1.6"
bytes = "1.5"

# Performance and concurrency
rayon = { version = "1.8", optional = true }
crossbeam = { version = "0.8", optional = true }
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
ahash = "0.8"
smallstr = "0.3"
hashbrown = "0.14"
bitvec = "1.0"
lru = "0.12"
memmap2 = "0.9"
arrayvec = "0.7"
smallvec = "1.11"
indexmap = "2.2"
tinyvec = "1.6"
ordered-float = "4.2"
half = "2.4"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Core type dependencies
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
raw-cpuid = "11.0"

# Lazy static for shared data
once_cell = "1.19"
lazy_static = "1.4"

# Random number generation
rand = "0.8"
fastrand = "2.0"

# Testing
criterion = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"

# Property-based testing
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Fuzzing
libfuzzer-sys = "0.4"

# Additional testing utilities
mockall = "0.12"
rstest = "0.18"
test-case = "3.3"
serial_test = "3.0"
float-cmp = "0.9"
rand_chacha = "0.3"
fake = { version = "2.9", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Performance testing
imbue = "0.1"
stats_alloc = "0.1"

# Async testing
async-std = { version = "1.12", features = ["attributes"] }
tokio-util = "0.7"

# Additional benchmarking
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
criterion-perf-events = "0.4"

# Test data generation
serde_yaml = "0.9"
csv = "1.3"
image = "0.24"
hound = "3.5"
rustfft = "6.1"

[[bench]]
name = "text_analysis"
harness = false

[[bench]]
name = "vision_benchmarks"
harness = false

[[bench]]
name = "audio_benchmarks"
harness = false

[[bench]]
name = "fusion_benchmarks"
harness = false

[[bench]]
name = "performance_regression"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

