[workspace]
members = [
    "opencv-core",
    "opencv-wasm",
    "opencv-sdk"
]
resolver = "2"

[workspace.package]
version = "4.8.1"
edition = "2021"
authors = ["ruv-FANN Team <team@ruv-fann.org>"]
license = "Apache-2.0"
repository = "https://github.com/ruvnet/ruv-FANN"
homepage = "https://ruv-fann.org"
description = "Complete OpenCV 4.x implementation in Rust with FANN integration"
keywords = ["opencv", "computer-vision", "image-processing", "rust", "fann"]
categories = ["computer-vision", "multimedia::images", "science"]

[workspace.dependencies]
# Core dependencies
libc = "0.2"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
once_cell = "1.19"

# Async and threading
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# GPU acceleration
cuda-rs = "0.3"
cudarc = "0.9"

# WebAssembly
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Image formats
image = "0.24"
imageproc = "0.23"
tiff = "0.9"
jpeg-decoder = "0.3"
png = "0.17"

# Video formats
ffmpeg-next = "6.0"
gstreamer = "0.21"

# Math and linear algebra
nalgebra = "0.32"
ndarray = "0.15"
blas-src = { version = "0.8", features = ["openblas"] }
lapack-src = { version = "0.8", features = ["openblas"] }

# Build dependencies
bindgen = "0.69"
cc = "1.0"
pkg-config = "0.3"
cmake = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

