[package]
name = "ruv-swarm-process"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Process management and daemon support for RUV Swarm"

[dependencies]
# Core workspace dependencies
tokio = { workspace = true, features = ["rt", "process", "fs", "signal", "sync", "time"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Process management
sysinfo = "0.32"
nix = { version = "0.29", features = ["signal", "process"] }
fs2 = "0.4"
atomicwrites = "0.4"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "winnt"] }

[dev-dependencies]
tempfile = "3.15"
tokio-test = "0.4"
proptest = { workspace = true }
